# vgc-mlops-engine

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  code_analysis.py  docker-compose.yml  main.py  mlflow.db  prometheus.yml  pyproject.toml  selection_TODO.md  test_gold_tensor.py
.github/workflows/: ci.yml
benchmarks/: evaluate_battle.py  evaluate_bayesian.py  evaluate_gmm.py  evaluate_selection.py  validate_battle_policy.py
infrastructure/: Dockerfile  Dockerfile.engine  docker-compose.yml
infrastructure/prometheus/: prometheus.yml
models/: archetype_gmm.pkl
src/agent/: base.py  core_player.py  reward_shaping.py  teambuilder.py
src/agent/battle_policy/: README.md  main.py  registry.py
src/agent/battle_policy/baselines/: epsilon_greedy.py  softmax.py
src/agent/battle_policy/heuristics/: scoring.py  synergy.py  threat.py
src/agent/battle_policy/utils/: type_chart.py
src/agent/selection_policy/: README.md  bayesian_do_selection.py  bayesian_inference.py  classifier.py  double_oracle.py  hydrator.py  main.py  math_utils.py  optimizer.py  parse_priors.py  transformer.py  utils.py
src/agent/teambuild_policy/: analyze_smogon.py  battle_royale.py  cache.py  evolution.py  fitness.py  operators.py
src/config/: __init__.py  battle_weights.yaml  loader.py  model.py  models.py  selection_model.py  selection_weights.yaml  teambuild_config.py
src/data_ingestion/: extract_deep_dimensions.py  extract_limitless.py  extract_pikalytics.py  extract_pokeAPI.py  extract_smogon.py  extract_vgc_bench.py
src/data_processing/: generate_gold_tensors.py  hydrate_limitless.py  normalize_silver.py  process_limitless_validation.py  s3_utils.py  smogon_etl.py
src/legacy_agent/battle_policy/: README.md  main.py  registry.py
src/legacy_agent/tests/: test_battle_baselines.py  test_bayesian.py  test_bayesian_selection.py  test_gmm.py  test_nash_payoff.py
tests/: conftest.py  test_archtype_seleciton.py  test_battle_main.py  test_battle_policy.py  test_bayesian_inference.py  test_classifier.py  test_config.py  test_double_oracle.py  test_gold_tensors.py  test_hydrator.py  test_main.py  test_matchup_selection.py  test_math.py  test_nash.py  test_optimizer.py  test_payoff.py  test_pipeline.py  test_scoring_selection.py  test_selection_config.py  test_selection_integration.py  test_selection_math.py  test_synergy.py  test_teambuild_cache.py  test_teambuild_evolution.py  test_teambuild_fitness.py  test_teambuild_operators.py  test_teambuild_pipeline.py  test_teambuild_royale.py  test_transformer.py  test_typechart.py  testing_gmm.py
vgc_data/: silver_standings.parquet
(+16 files in other folders)
