[project]
name = "vgc-mlops-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "vgc2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.10",
    "matplotlib>=3.10.8",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["src/**/*.py"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
vgc2 = { git = "https://gitlab.com/DracoStriker/pokemon-vgc-engine.git" }

[project.entry-points."vgc2.competitors"]
my_agent = "src.agent.battle_policy.registry:get_policy"
